PLP_Project_1/src/DelphiParser.java
// Generated from C:/Users/alber/IdeaProjects/PLP_Project_1_101/src/Delphi.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, AND=11, ARRAY=12, BEGIN=13, BOOLEAN=14, CASE=15, CHAR=16, CHR=17, 
		CONST=18, DIV=19, DO=20, DOWNTO=21, ELSE=22, END=23, FILE=24, FOR=25, 
		FUNCTION=26, GOTO=27, IF=28, IN=29, INTEGER=30, LABEL=31, MOD=32, NIL=33, 
		NOT=34, OF=35, OR=36, PACKED=37, PROCEDURE=38, PROGRAM=39, REAL=40, RECORD=41, 
		REPEAT=42, SET=43, THEN=44, TO=45, TYPE=46, UNTIL=47, VAR=48, WHILE=49, 
		WITH=50, PLUS=51, MINUS=52, STAR=53, SLASH=54, ASSIGN=55, COMMA=56, SEMI=57, 
		COLON=58, EQUAL=59, NOT_EQUAL=60, LT=61, LE=62, GE=63, GT=64, LPAREN=65, 
		RPAREN=66, LBRACK=67, LBRACK2=68, RBRACK=69, RBRACK2=70, POINTER=71, AT=72, 
		DOT=73, DOTDOT=74, LCURLY=75, RCURLY=76, UNIT=77, INTERFACE=78, USES=79, 
		STRING=80, IMPLEMENTATION=81, TRUE=82, FALSE=83, CLASS=84, PROPERTY=85, 
		IMPLEMENTS=86, CONSTRUCTOR=87, DESTRUCTOR=88, WS=89, COMMENT_1=90, COMMENT_2=91, 
		IDENT=92, STRING_LITERAL=93, NUM_INT=94, NUM_REAL=95;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_interfaceType = 3, 
		RULE_interfaceBody = 4, RULE_interfaceMethodDeclaration = 5, RULE_block = 6, 
		RULE_usesUnitsPart = 7, RULE_labelDeclarationPart = 8, RULE_label = 9, 
		RULE_constantDefinitionPart = 10, RULE_constantDefinition = 11, RULE_constantChr = 12, 
		RULE_constant = 13, RULE_unsignedNumber = 14, RULE_unsignedInteger = 15, 
		RULE_unsignedReal = 16, RULE_sign = 17, RULE_bool_ = 18, RULE_string = 19, 
		RULE_typeDefinitionPart = 20, RULE_typeDefinition = 21, RULE_functionType = 22, 
		RULE_procedureType = 23, RULE_type_ = 24, RULE_simpleType = 25, RULE_scalarType = 26, 
		RULE_subrangeType = 27, RULE_typeIdentifier = 28, RULE_structuredType = 29, 
		RULE_unpackedStructuredType = 30, RULE_stringtype = 31, RULE_arrayType = 32, 
		RULE_typeList = 33, RULE_indexType = 34, RULE_componentType = 35, RULE_recordType = 36, 
		RULE_fieldList = 37, RULE_fixedPart = 38, RULE_recordSection = 39, RULE_variantPart = 40, 
		RULE_tag = 41, RULE_variant = 42, RULE_setType = 43, RULE_baseType = 44, 
		RULE_fileType = 45, RULE_pointerType = 46, RULE_variableDeclarationPart = 47, 
		RULE_variableDeclaration = 48, RULE_procedureAndFunctionDeclarationPart = 49, 
		RULE_procedureOrFunctionDeclaration = 50, RULE_procedureDeclaration = 51, 
		RULE_formalParameterList = 52, RULE_formalParameterSection = 53, RULE_parameterGroup = 54, 
		RULE_identifierList = 55, RULE_constList = 56, RULE_functionDeclaration = 57, 
		RULE_resultType = 58, RULE_statement = 59, RULE_unlabelledStatement = 60, 
		RULE_simpleStatement = 61, RULE_assignmentStatement = 62, RULE_variable = 63, 
		RULE_expression = 64, RULE_relationaloperator = 65, RULE_simpleExpression = 66, 
		RULE_additiveoperator = 67, RULE_term = 68, RULE_multiplicativeoperator = 69, 
		RULE_signedFactor = 70, RULE_factor = 71, RULE_unsignedConstant = 72, 
		RULE_functionDesignator = 73, RULE_parameterList = 74, RULE_set_ = 75, 
		RULE_elementList = 76, RULE_element = 77, RULE_procedureStatement = 78, 
		RULE_actualParameter = 79, RULE_parameterwidth = 80, RULE_gotoStatement = 81, 
		RULE_emptyStatement_ = 82, RULE_empty_ = 83, RULE_structuredStatement = 84, 
		RULE_compoundStatement = 85, RULE_statements = 86, RULE_conditionalStatement = 87, 
		RULE_ifStatement = 88, RULE_caseStatement = 89, RULE_caseListElement = 90, 
		RULE_repetetiveStatement = 91, RULE_whileStatement = 92, RULE_repeatStatement = 93, 
		RULE_forStatement = 94, RULE_forList = 95, RULE_initialValue = 96, RULE_finalValue = 97, 
		RULE_withStatement = 98, RULE_recordVariableList = 99, RULE_formalParameters = 100, 
		RULE_classType = 101, RULE_implementsClause = 102, RULE_classBody = 103, 
		RULE_visibilitySpecifier = 104, RULE_classModifiers = 105, RULE_classBlock = 106, 
		RULE_accessSpecifier = 107, RULE_classMember = 108, RULE_fieldDeclaration = 109, 
		RULE_methodDeclaration = 110, RULE_constructorDeclaration = 111, RULE_destructorDeclaration = 112, 
		RULE_propertyDeclaration = 113, RULE_classVariableDeclaration = 114;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "interfaceType", "interfaceBody", 
			"interfaceMethodDeclaration", "block", "usesUnitsPart", "labelDeclarationPart", 
			"label", "constantDefinitionPart", "constantDefinition", "constantChr", 
			"constant", "unsignedNumber", "unsignedInteger", "unsignedReal", "sign", 
			"bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "type_", "simpleType", "scalarType", "subrangeType", 
			"typeIdentifier", "structuredType", "unpackedStructuredType", "stringtype", 
			"arrayType", "typeList", "indexType", "componentType", "recordType", 
			"fieldList", "fixedPart", "recordSection", "variantPart", "tag", "variant", 
			"setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList", "formalParameters", "classType", 
			"implementsClause", "classBody", "visibilitySpecifier", "classModifiers", 
			"classBlock", "accessSpecifier", "classMember", "fieldDeclaration", "methodDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "propertyDeclaration", 
			"classVariableDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'procedure'", "'PUBLIC'", "'PRIVATE'", "'PROTECTED'", 
			"'ABSTRACT'", "'SEALED'", "'PUBLISHED'", "'READ'", "'WRITE'", "'AND'", 
			"'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", "'CHR'", "'CONST'", 
			"'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
			"'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", 
			"'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'REAL'", "'RECORD'", 
			"'REPEAT'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'", 
			"'CLASS'", "'PROPERTY'", "'IMPLEMENTS'", "'CONSTRUCTOR'", "'DESTRUCTOR'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "AND", 
			"ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", "DIV", "DO", 
			"DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", 
			"INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", 
			"PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", 
			"VAR", "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", 
			"SEMI", "COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", 
			"RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", 
			"DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", "USES", "STRING", 
			"IMPLEMENTATION", "TRUE", "FALSE", "CLASS", "PROPERTY", "IMPLEMENTS", 
			"CONSTRUCTOR", "DESTRUCTOR", "WS", "COMMENT_1", "COMMENT_2", "IDENT", 
			"STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(DelphiParser.EOF, 0); }
		public UsesUnitsPartContext usesUnitsPart() {
			return getRuleContext(UsesUnitsPartContext.class,0);
		}
		public InterfaceTypeContext interfaceType() {
			return getRuleContext(InterfaceTypeContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			programHeading();
			setState(232);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(231);
				usesUnitsPart();
				}
				break;
			}
			setState(235);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(234);
				interfaceType();
				}
			}

			setState(237);
			block();
			setState(238);
			match(DOT);
			setState(239);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(DelphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(255);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(241);
				match(PROGRAM);
				setState(242);
				identifier();
				setState(247);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(243);
					match(LPAREN);
					setState(244);
					identifierList();
					setState(245);
					match(RPAREN);
					}
				}

				setState(249);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(251);
				match(UNIT);
				setState(252);
				identifier();
				setState(253);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DelphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(257);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
